# BuildFlow

./: .gitignore  docker-compose.monitoring.yml  railway.toml
backend/: .dockerignore  .env.example  Dockerfile  Procfile  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  start.sh
backend/.github/workflows/: ci.yml  deploy.yml
backend/alembic/: env.py
backend/alembic/versions/: 2fe2f25ad249_create_exports_table.py  37fdfc1c7dae_create_reports_table.py  5e0b25a97393_create_daily_reports_photos_and_documents.py  8ea6286d1acc_create_workers_and_assignments.py  e08c052fea6e_create_tenants_users_and_refresh_tokens.py  f6159f60e980_create_materials_and_project_materials.py  f7fa9f9b5f96_create_clients_and_projects.py
backend/app/: main.py
backend/app/auth/: dependencies.py  jwt.py  password.py  permissions.py
backend/app/core/: config.py  constants.py  email_templates.py  events.py  exceptions.py  logging.py  metrics.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/middleware/: log_context.py  metrics.py  rate_limit.py  request_id.py  security.py  tenant.py
backend/app/models/: client.py  daily_report.py  document.py  export.py  material.py  photo.py  project.py  project_material.py  project_worker.py  refresh_token.py  report.py  tenant.py  user.py  worker.py
backend/tests/: conftest.py  factories.py  test_api_auth.py  test_assignments.py  test_auth.py  test_auth_units.py  test_clients.py  test_daily_reports.py  test_dashboard.py  test_health.py  test_materials.py  test_meta.py  test_project_materials.py  test_projects.py  test_repositories.py  test_services.py  test_workers.py
(+80 files in other folders)
